feat (file): Add full API along with document and filtering
